[gd_scene load_steps=25 format=2]

[ext_resource path="res://character/nodes/Body_parts/BodyPart.tscn" type="PackedScene" id=1]
[ext_resource path="res://character/character.gd" type="Script" id=2]
[ext_resource path="res://character/nodes/Body_parts/damageable/parts/Head.tscn" type="PackedScene" id=3]
[ext_resource path="res://character/nodes/Body_parts/damageable/parts/ArmTop.tscn" type="PackedScene" id=4]
[ext_resource path="res://character/nodes/Body_parts/damageable/parts/ArmBottom.tscn" type="PackedScene" id=5]
[ext_resource path="res://character/nodes/grab_point/GrabPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://character/nodes/Body_parts/damageable/parts/LegTop.tscn" type="PackedScene" id=7]
[ext_resource path="res://character/nodes/Body_parts/damageable/parts/LegBottom.tscn" type="PackedScene" id=8]
[ext_resource path="res://character/nodes/animation_player.gd" type="Script" id=9]
[ext_resource path="res://character/nodes/item_manager.gd" type="Script" id=10]
[ext_resource path="res://character/nodes/grab_area.gd" type="Script" id=11]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.2
absorbent = true

[sub_resource type="CapsuleShape2D" id=2]
resource_local_to_scene = true
radius = 1.44157
height = 25.4696

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("TorsoLegAxle:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TorsoLegAxle/LegTopBottomAxle:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TorsoLegAxle2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TorsoLegAxle2/LegTopBottomAxle2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TorsoLegAxle:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -35.0, 0.0, 10.0, 20.0, 10.0, -10.0, -45.0, -60.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TorsoLegAxle/LegTopBottomAxle:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 30.0, 15.0, 10.0, 30.0, 60.0, 80.0, 45.0, 10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TorsoLegAxle2:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 10.0, -10.0, -45.0, -60.0, -35.0, 0.0, 10.0, 20.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TorsoLegAxle2/LegTopBottomAxle2:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 60.0, 80.0, 45.0, 10.0, 30.0, 15.0, 10.0, 30.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "RunningLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TorsoLegAxle:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 35.0, 0.0, -10.0, -20.0, -10.0, 10.0, 45.0, 60.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TorsoLegAxle/LegTopBottomAxle:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -30.0, -15.0, -10.0, -30.0, -60.0, -80.0, -45.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TorsoLegAxle2:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -10.0, 10.0, 45.0, 60.0, 35.0, 0.0, -10.0, -20.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TorsoLegAxle2/LegTopBottomAxle2:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -60.0, -80.0, -45.0, -10.0, -30.0, -15.0, -10.0, -30.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Running"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "RunningLeft"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Idle"

[sub_resource type="AnimationNodeBlendSpace1D" id=9]
blend_point_0/node = SubResource( 6 )
blend_point_0/pos = 1.0
blend_point_1/node = SubResource( 7 )
blend_point_1/pos = -1.0
blend_point_2/node = SubResource( 8 )
blend_point_2/pos = 0.0

[sub_resource type="AnimationNodeTimeScale" id=10]

[sub_resource type="AnimationNodeTimeScale" id=11]

[sub_resource type="AnimationNodeBlendTree" id=12]
graph_offset = Vector2( 0, -63.5 )
nodes/BlendSpace1D/node = SubResource( 9 )
nodes/BlendSpace1D/position = Vector2( 60, -20 )
nodes/RunSpeed/node = SubResource( 10 )
nodes/RunSpeed/position = Vector2( 500, 20 )
nodes/TimeScale/node = SubResource( 11 )
nodes/TimeScale/position = Vector2( 300, 0 )
nodes/output/position = Vector2( 740, 20 )
node_connections = [ "output", 0, "RunSpeed", "TimeScale", 0, "BlendSpace1D", "RunSpeed", 0, "TimeScale" ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 54.5216, 62.7088 )

[node name="Character" instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 0
mass = 5.5
physics_material_override = SubResource( 1 )
continuous_cd = 1
script = ExtResource( 2 )
power = 3.0
brakePower = 1.0
maxAppliableAngularV = 10.0

[node name="Sprite" parent="." index="0"]
scale = Vector2( 0.3, 0.3 )
region_rect = Rect2( 86, 0, 11, 95 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 2 )

[node name="BodyParts" type="Node2D" parent="." index="2"]
editor/display_folded = true

[node name="Head" parent="BodyParts" index="0" instance=ExtResource( 3 )]
editor/display_folded = true
position = Vector2( 0, -13.7864 )
collision_layer = 0
collision_mask = 0
mass = 0.6
physics_material_override = SubResource( 1 )
continuous_cd = 1
targetNodePath = NodePath("../../Ghost/TorsoHeadAxle")
power = 20.0
brakePower = 1.0
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="HeadTorsoPin" type="PinJoint2D" parent="BodyParts/Head" index="2"]
visible = false
position = Vector2( 0, 0.00039959 )
node_a = NodePath("../../..")
node_b = NodePath("..")

[node name="ArmTop" parent="BodyParts" index="1" instance=ExtResource( 4 )]
editor/display_folded = true
position = Vector2( 0, -10.1763 )
collision_layer = 0
collision_mask = 0
mass = 0.6
physics_material_override = SubResource( 1 )
continuous_cd = 1
targetNodePath = NodePath("../../Ghost/TorsoAxle/TorsoArmAxle")
power = 20.0
brakePower = 1.0
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="TorsoArmPin" type="PinJoint2D" parent="BodyParts/ArmTop" index="2"]
visible = false
position = Vector2( 0, 0.000300407 )
node_a = NodePath("../../..")
node_b = NodePath("..")

[node name="ArmBottom" parent="BodyParts/ArmTop" index="3" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, 11.4021 )
mass = 0.4
physics_material_override = SubResource( 1 )
continuous_cd = 1
targetNodePath = NodePath("../../../Ghost/TorsoAxle/TorsoArmAxle/ArmTopBotomAxle")
power = 20.0
brakePower = 1.0
minAngle = -3.0
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="ArmTopBottomPin" type="PinJoint2D" parent="BodyParts/ArmTop/ArmBottom" index="2"]
visible = false
position = Vector2( 0, 0.000200391 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="RightGrabPoint" parent="BodyParts/ArmTop/ArmBottom" index="3" instance=ExtResource( 6 )]

[node name="LegTop" parent="BodyParts" index="2" instance=ExtResource( 7 )]
editor/display_folded = true
position = Vector2( 0, 13.3132 )
collision_layer = 0
collision_mask = 0
physics_material_override = SubResource( 1 )
continuous_cd = 1
targetNodePath = NodePath("../../Ghost/TorsoLegAxle")
power = 30.0
maxAppliedAngularV = 200.0
maxAppliedDamp = 200.0
brakePower = 1.0
minAngle = -1.5
maxAngle = 1.5
restrictionPower = 1.0
maxAppliableAngularV = 40

[node name="TorsoLegPin" type="PinJoint2D" parent="BodyParts/LegTop" index="2"]
visible = false
position = Vector2( 0, -0.000200272 )
node_a = NodePath("../../..")
node_b = NodePath("..")

[node name="LegBottom" parent="BodyParts/LegTop" index="3" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 0, 17.4546 )
mass = 0.6
physics_material_override = SubResource( 1 )
continuous_cd = 1
targetNodePath = NodePath("../../../Ghost/TorsoLegAxle/LegTopBottomAxle")
power = 30.0
maxAppliedAngularV = 200.0
maxAppliedDamp = 200.0
brakePower = 1.0
maxAngle = 2.0
restrictionPower = 1.5
maxAppliableAngularV = 40

[node name="LegTopBottomPin" type="PinJoint2D" parent="BodyParts/LegTop/LegBottom" index="2"]
visible = false
position = Vector2( 0, 0.000200272 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="ArmTop2" parent="BodyParts" index="3" instance=ExtResource( 4 )]
editor/display_folded = true
position = Vector2( 0, -10.176 )
collision_layer = 0
collision_mask = 0
mass = 0.6
physics_material_override = SubResource( 1 )
continuous_cd = 1
targetNodePath = NodePath("../../Ghost/TorsoAxle/TorsoArmAxle2")
power = 20.0
brakePower = 1.0
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="TorsoArmPin2" type="PinJoint2D" parent="BodyParts/ArmTop2" index="2"]
visible = false
node_a = NodePath("../../..")
node_b = NodePath("..")

[node name="ArmBottom2" parent="BodyParts/ArmTop2" index="3" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, 11.4021 )
mass = 0.4
physics_material_override = SubResource( 1 )
continuous_cd = 1
targetNodePath = NodePath("../../../Ghost/TorsoAxle/TorsoArmAxle2/ArmTopBotomAxle2")
power = 20.0
brakePower = 1.0
minAngle = -3.0
restrictionPower = 1.0
maxAppliableAngularV = 15

[node name="ArmTopBottomPin2" type="PinJoint2D" parent="BodyParts/ArmTop2/ArmBottom2" index="0"]
visible = false
position = Vector2( 0, -0.000100017 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="LeftGrabPoint" parent="BodyParts/ArmTop2/ArmBottom2" index="3" instance=ExtResource( 6 )]

[node name="LegTop2" parent="BodyParts" index="4" instance=ExtResource( 7 )]
editor/display_folded = true
position = Vector2( 0, 13.3132 )
collision_layer = 0
collision_mask = 0
physics_material_override = SubResource( 1 )
continuous_cd = 1
targetNodePath = NodePath("../../Ghost/TorsoLegAxle2")
power = 30.0
maxAppliedAngularV = 200.0
maxAppliedDamp = 200.0
brakePower = 1.0
minAngle = -1.5
maxAngle = 1.5
restrictionPower = 1.0
maxAppliableAngularV = 40

[node name="TorsoLegPin2" type="PinJoint2D" parent="BodyParts/LegTop2" index="2"]
visible = false
position = Vector2( 0, -0.000200272 )
node_a = NodePath("../../..")
node_b = NodePath("..")

[node name="LegBottom2" parent="BodyParts/LegTop2" index="3" instance=ExtResource( 8 )]
position = Vector2( 0, 17.4546 )
mass = 0.6
physics_material_override = SubResource( 1 )
continuous_cd = 1
targetNodePath = NodePath("../../../Ghost/TorsoLegAxle2/LegTopBottomAxle2")
power = 30.0
maxAppliedAngularV = 200.0
maxAppliedDamp = 200.0
brakePower = 1.0
maxAngle = 2.0
restrictionPower = 1.5
maxAppliableAngularV = 40

[node name="LegTopBottomPin2" type="PinJoint2D" parent="BodyParts/LegTop2/LegBottom2" index="2"]
visible = false
position = Vector2( 0, 0.000200272 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Ghost" type="Node2D" parent="." index="3"]
editor/display_folded = true

[node name="TorsoHeadAxle" type="Position2D" parent="Ghost" index="0"]
position = Vector2( 0, -13.8082 )

[node name="TorsoAxle" type="Position2D" parent="Ghost" index="1"]
editor/display_folded = true
position = Vector2( 0, 12.493 )

[node name="TorsoArmAxle" type="Position2D" parent="Ghost/TorsoAxle" index="0"]
position = Vector2( -1.93715e-007, -22.9125 )

[node name="ArmTopBotomAxle" type="Position2D" parent="Ghost/TorsoAxle/TorsoArmAxle" index="0"]
position = Vector2( 0, 10.6509 )

[node name="TorsoArmAxle2" type="Position2D" parent="Ghost/TorsoAxle" index="1"]
position = Vector2( 1.66893e-006, -22.9125 )

[node name="ArmTopBotomAxle2" type="Position2D" parent="Ghost/TorsoAxle/TorsoArmAxle2" index="0"]
position = Vector2( 0, 10.6509 )

[node name="TorsoLegAxle" type="Position2D" parent="Ghost" index="2"]
editor/display_folded = true
position = Vector2( -4.17233e-007, 12.4927 )

[node name="LegTopBottomAxle" type="Position2D" parent="Ghost/TorsoLegAxle" index="0"]
position = Vector2( 0, 16.907 )

[node name="TorsoLegAxle2" type="Position2D" parent="Ghost" index="3"]
editor/display_folded = true
position = Vector2( 5.36442e-007, 12.4927 )

[node name="LegTopBottomAxle2" type="Position2D" parent="Ghost/TorsoLegAxle2" index="0"]
position = Vector2( 0, 16.907 )

[node name="AnimationManager" type="AnimationPlayer" parent="." index="4"]
root_node = NodePath("../Ghost")
playback_process_mode = 0
anims/Idle = SubResource( 3 )
anims/Running = SubResource( 4 )
anims/RunningLeft = SubResource( 5 )
script = ExtResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="." index="5"]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationManager")
active = true
process_mode = 0
parameters/BlendSpace1D/blend_position = 0.0
parameters/RunSpeed/scale = 2.0
parameters/TimeScale/scale = 1.0

[node name="ItemManager" type="Node" parent="." index="6"]
editor/display_folded = true
script = ExtResource( 10 )
_right_hand_grabPoint_path = NodePath("../BodyParts/ArmTop/ArmBottom/RightGrabPoint")
_left_hand_grabPoint_path = NodePath("../BodyParts/ArmTop2/ArmBottom2/LeftGrabPoint")

[node name="ItemPickingTimer" type="Timer" parent="ItemManager" index="0"]
one_shot = true

[node name="GrabArea" type="Area2D" parent="." index="7"]
editor/display_folded = true
position = Vector2( 0, 20.6906 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea" index="0"]
visible = false
position = Vector2( 0, 7.29973 )
shape = SubResource( 13 )

